[gd_scene load_steps=11 format=2]

[ext_resource path="res://ASSETS/enemies/level2_1/cat/cat4.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/enemies/level2_1/cat/cat.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemies/level2_1/cat/cat3.png" type="Texture" id=3]
[ext_resource path="res://enemy/level2_1/Cat.gd" type="Script" id=4]
[ext_resource path="res://ASSETS/enemies/level2_1/cat/cat2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 24 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 31.9994
height = 576.001

[node name="Cat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 3.43942, 3.76471 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.78829e-07, 4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
show_behind_parent = true
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 48 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -28 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Immortality_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="player_target" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_target"]
rotation = 1.5708
shape = SubResource( 5 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Immortality_timer" to="." method="_on_Immortality_timer_timeout"]
[connection signal="body_entered" from="player_target" to="." method="_on_player_target_body_entered"]
